// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions snapshots onGameSetName 1`] = `
Object {
  "type": "GAME_START_NEW",
}
`;

exports[`Actions snapshots onGameSetTotal 1`] = `
Object {
  "type": "GAME_START_NEW",
}
`;

exports[`Actions snapshots onGameStart 1`] = `
Object {
  "type": "GAME_START",
}
`;

exports[`Actions snapshots onGameStartNew 1`] = `
Object {
  "type": "GAME_START_NEW",
}
`;

exports[`Actions snapshots onScoreChange 1`] = `
Object {
  "type": "SCORE_CHANGE",
}
`;

exports[`Actions snapshots onScoreClear 1`] = `
Object {
  "type": "SCORE_CLEAR",
}
`;

exports[`Actions snapshots onScoreSubmit 1`] = `
Object {
  "type": "SCORE_SUBMIT",
}
`;

exports[`Actions snapshots onScoreUndo 1`] = `
Object {
  "type": "SCORE_UNDO",
}
`;
